[gd_scene load_steps=15 format=3 uid="uid://iqe6c16khvkc"]

[ext_resource type="Script" path="res://Knight.gd" id="1_herxp"]
[ext_resource type="PackedScene" uid="uid://g2inpcce2elc" path="res://State Machines/knight_state_machine.tscn" id="2_78nyq"]
[ext_resource type="Script" path="res://player/KillCounterLabel_script.gd" id="3_7ad5t"]
[ext_resource type="Texture2D" uid="uid://b25fx7rky8y1f" path="res://Knight/warrior-full_page.png" id="4_7bx3n"]
[ext_resource type="Script" path="res://Scripts/direction_pointer.gd" id="6_l2yhl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ao4p2"]
radius = 15.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c5kom"]
radius = 120.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwa3k"]
size = Vector2(88.9465, 78.3966)

[sub_resource type="LabelSettings" id="LabelSettings_fnvkr"]
font_size = 50
font_color = Color(1, 0.117647, 0.0901961, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_2ncpx"]
resource_name = "Idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81]
}

[sub_resource type="Animation" id="Animation_mekjv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(88.9465, 78.3966)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.62006, 14.2303)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_36uom"]
resource_name = "Run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [44, 45, 46, 47, 48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_nv52g"]
resource_name = "Swing_one"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(105.424, 83.0086), Vector2(56.5227, 30.4762), Vector2(56.5227, 30.4762)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(15.2372, 7.31306), Vector2(-21.2625, 34.3804), Vector2(-22.8571, 28.6667)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0wc23"]
_data = {
"Idle": SubResource("Animation_2ncpx"),
"RESET": SubResource("Animation_mekjv"),
"Run": SubResource("Animation_36uom"),
"Swing_one": SubResource("Animation_nv52g")
}

[node name="Knight" type="CharacterBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_herxp")

[node name="Body" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_ao4p2")

[node name="FogOfWar" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="Fog_of_war_range" type="CollisionShape2D" parent="FogOfWar"]
modulate = Color(0, 0, 0, 1)
light_mask = 2
visibility_layer = 2
shape = SubResource("CircleShape2D_c5kom")

[node name="Knight_State_Machine" parent="." instance=ExtResource("2_78nyq")]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-0.972726, -25.0289)
rotation = 0.08674
scale = Vector2(0.312124, 0.329882)
skew = -0.00916553
script = ExtResource("6_l2yhl")

[node name="Knight_Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_7bx3n")
hframes = 22
vframes = 7

[node name="Hurtbox" type="Area2D" parent="Knight_Sprite2D"]
visible = false
position = Vector2(0, -1.4)
scale = Vector2(0.7, 0.699999)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knight_Sprite2D/Hurtbox"]
position = Vector2(7.62006, 14.2303)
rotation = 3.14122
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_gwa3k")
disabled = true

[node name="KillCounterLabel" type="Label" parent="Knight_Sprite2D"]
visible = false
offset_left = -1.4
offset_top = -25.9001
offset_right = 227.6
offset_bottom = 80.1003
label_settings = SubResource("LabelSettings_fnvkr")
horizontal_alignment = 1
uppercase = true
script = ExtResource("3_7ad5t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Knight_Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_0wc23")
}

[connection signal="moving" from="Knight_State_Machine" to="Sprite2D" method="_on_knight_state_machine_moving"]
[connection signal="thinking" from="Knight_State_Machine" to="Sprite2D" method="_on_knight_state_machine_thinking"]
[connection signal="body_entered" from="Knight_Sprite2D/Hurtbox" to="." method="_on_hurtbox_body_entered"]
